# scim-identity-management

./: .env.example  .gitignore  .railwayignore  COMPLETE_DOCUMENTATION.md  Dockerfile  Procfile  Procfile_heroku  RAILWAY_TROUBLESHOOTING.md  README.md  add_railway_users.py  check_railway_domain.py  clear_users.py  copy_to_desktop.py  create_employee_db.py  create_sample_users.py  create_scim_zip.py  create_test_users.py  create_zip.py  deploy_railway.py  fix_railway_deployment.py  fix_railway_users.py  get_domain.bat  init_db.py  manage.py  nixpacks.toml  pyproject.toml  railway.json  railway_start.sh  redeploy_railway.bat  render.yaml  run_server.py  setup_railway.bat  start.sh  start_local.py  start_servers.bat  sync_to_railway.py  test_existing_data.py  test_local_servers.py  test_railway_deployment.py  update_db.py  (+2 more)
app/: __init__.py  main.py
app/api/: employee.py  identity.py  slack.py
app/core/: auth.py  config.py
app/models/: employee.py  identity.py
app/repository/: employee.py  identity.py
app/schemas/: employee.py  identity.py
app/service/: identity.py  slack.py
django_scim/: __init__.py  settings.py  urls.py  views.py
pam/slack/: OAUTH_GUIDE.md  QUICK_START.md  README.md  TOKEN_GUIDE.md  api_test.py  app.py  app_auth.py  auth_manager.py  auth_scim_server.py  run_all.py  scim_client.py  simple_auth.py  test_oauth.py  test_simple.py  test_tokens.py
slack_scim/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
templates/: api_docs.html  home.html  login.html  user_management.html
tests/: test_main.py
(+3 files in other folders)
